# aconnectd

./: CMakeLists.txt  README.md
deploy/: CMakeLists.txt  aconnectd.json
deploy/buildroot/: Config.in  external.desc  external.mk
deploy/buildroot/package/aconnectd/: Config.in  aconnectd.mk
deploy/systemd/: aconnectd.service
include/: aconnectd.h
src/: CMakeLists.txt  main.cpp
